Some additional test coverage

--- a/game/package.json
+++ b/game/package.json
@@ -8,9 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --no-watch",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest --coverage --no-watch",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed"
   },
