Improves save/load system with fixes and features
Adds comprehensive save/load functionality, including support for persisting game state, windows, messages, and timers.

Introduces new E2E tests to ensure the stability and accuracy of the save/load system, as well as a generator for creating scenario fixtures.

Enhances the debug panel by allowing to modify and load the game state.

This allows the users to continue their progress.

--- a/game/package.json
+++ b/game/package.json
@@ -12,7 +12,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage --no-watch",
     "test:e2e": "playwright test",
-    "test:e2e:headed": "playwright test --headed"
+    "test:e2e:headed": "playwright test --headed",
+    "generate:scenarios": "playwright test e2e/generators/ --project=chromium"
   },
   "dependencies": {
     "react": "^19.2.0",
