Enhances procedural mission system and tutorial
Adds procedural mission generation after tutorial completion and refactors tutorial flow. This change introduces several enhancements:

- Generates procedural missions after tutorial completion, adding variety to gameplay.
- Implements a client registry to track mission opportunities.
- Introduces sabotage scripted event during the tutorial and fixes to the tutorial flow.
- Implements one-time use NAR attachments to prevent reuse, enhancing security.
- Adds test coverage for procedural mission and tutorial flows, and a framework for future system tests.
- Adds the terminal lockout overlay and reworks the existing forced disconnect overlay.
- Stores file operation history for the File Manager

These changes result in more dynamic gameplay, improved tutorial experience, and more realistic scenarios for game play.

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test": "vitest --no-watch",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage --no-watch",
-    "test:e2e": "playwright test",
-    "test:e2e:headed": "playwright test --headed",
-    "generate:scenarios": "playwright test e2e/generators/ --project=chromium"
+    "test:e2e": "playwright test e2e/systems",
+    "test:e2e:playthroughs": "playwright test e2e/playthroughs",
+    "generate:scenarios": "playwright test e2e/generators"
   },
   "dependencies": {
     "react": "^19.2.0",
