Enhances missions with extensions and local SSD
Implements mission extensions, allowing for mid-mission additions of objectives and increased payout.

Adds local SSD functionality, enabling file operations directly on the user's terminal.

Refactors objective completion to support out-of-order completion and fix an issue with auto-completion.

Increases E2E test reliability.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "vitest --no-watch",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage --no-watch",
-    "test:e2e": "playwright test e2e/systems",
+    "test:e2e": "playwright test e2e/systems --retries=2",
     "test:e2e:playthroughs": "playwright test e2e/playthroughs",
     "generate:scenarios": "playwright test e2e/generators"
   },
