--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage --no-watch",
     "test:e2e": "playwright test e2e/systems --retries=2",
-    "test:e2e:playthroughs": "playwright test e2e/playthroughs",
-    "generate:scenarios": "playwright test e2e/generators"
+    "test:e2e:playthroughs": "playwright test e2e/playthroughs --retries=2",
+    "generate:scenarios": "playwright test e2e/generators --workers=1"
   },
   "dependencies": {
     "react": "^19.2.0",
